<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/oses_start_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/oses_start_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView
            android:id="@+id/ScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oses_start_toolbar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:fillViewport="false"
            android:nestedScrollingEnabled="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:id="@+id/login_container"
                    android:gravity="center_vertical|center_horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/view2"
                        android:elevation="2dp"
                        card_view:cardUseCompatPadding="true">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:src="@drawable/oseslogo"
                            android:maxWidth="400dp"
                            android:visibility="visible"
                            android:scaleType="centerInside"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="6dp"
                            android:paddingTop="4dp"
                            android:adjustViewBounds="true" />

                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/view5"
                        android:elevation="2dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="6dp"
                            android:paddingTop="4dp"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/TextView02"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="left|center_horizontal"
                                android:text="Anmeldeinformationen"
                                style="@style/Theme.OSES.ListSeparator" />

                            <EditText
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_person"
                                android:hint="@string/benutzername_"
                                android:inputType="textNoSuggestions"
                                android:lines="1"
                                android:maxWidth="400dp"
                                android:minWidth="400dp"
                                android:imeOptions="actionNext">

                                <requestFocus />
                            </EditText>

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_action_accounts"
                                android:hint="@string/passwort_"
                                android:inputType="textPassword"
                                android:lines="1"
                                android:maxWidth="400dp"
                                android:minWidth="400dp"
                                android:imeOptions="actionDone"/>

                            <Button
                                android:id="@+id/button1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:onClick="Login"
                                android:text="@string/anmelden"
                                android:maxWidth="400dp"
                                android:minWidth="400dp" />

                            <TextView
                                android:id="@+id/TextView01"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:drawableLeft="@drawable/icon_lock"
                                android:drawablePadding="5dp"
                                android:gravity="center_vertical"
                                android:text="@string/verschlsslte_ubertragung"
                                android:textAppearance="?android:attr/textAppearanceMedium" />
                        </LinearLayout>


                        </android.support.v7.widget.CardView>


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/start_ver_info"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
