<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dokumente_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="2dp">

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="6dp"
            android:paddingTop="4dp">

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView04"
                    style="@style/Theme.OSES.ListSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center_horizontal"
                    android:text="@string/basisangaben"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LinearLayout11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:minWidth="120dp"
                        android:text="@string/typ_"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/dokumente_typ"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView07"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:minWidth="120dp"
                        android:text="@string/zaitraum_double_dot"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/dokumente_date_text"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:paddingLeft="8dp"
                        android:textSize="19sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:id="@+id/LinearLayout07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="6dp">

            <LinearLayout
                android:id="@+id/LinearLayout06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView09"
                    style="@style/Theme.OSES.ListSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center_horizontal"
                    android:text="@string/zusatzangaben"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LinearLayout14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:minWidth="120dp"
                        android:text="@string/tage_auschliessen" />

                    <Spinner
                        android:id="@+id/dokumente_skip"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:layout_weight="1"
                        android:digits="0123456789,;"
                        android:ems="10"
                        android:hint="@string/komma_getrennt"
                        android:inputType="textFilter|number"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp">

                    </EditText>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp">

                <TextView

                    android:id="@+id/textView13"
                    style="@style/Theme.OSES.ListSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="left|center_horizontal"
                    android:text="Information"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView13"
                    android:autoLink="email"
                    android:text="Es findet keine individuelle Berechnung des Faxversandes statt. Die Kosten für diesen Dienst werden durch Spenden finanziert. Die angezeigten Preise dienen nur der Information und als Hinweis darauf, dass diese Funktion bei übermäßiger Nutzung hohe Kosten verursacht.\n\nFür weitere Informationen, unter anderem auch zu  Spendenmöglichkeiten, kontaktiere bitte den Support unter info@oses.mobi."
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true" >

        <LinearLayout
            android:id="@+id/LinearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



                <TextView
                    android:id="@+id/TextView05"
                    style="@style/Theme.OSES.ListSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_horizontal"
                    android:text="@string/protokoll"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="15sp"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/dokumente_fax_protokoll">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>